# mcp-SWE

./: README.md  pyproject.toml
code_qa/: __init__.py  cli.py
code_qa/agents/: __init__.py  code_qa_agent.py
code_qa/config/: __init__.py  settings.py
code_qa/eval/: qa_evaluator.py
code_qa/scripts/: python_chunker.py  repo_downloader.py  repo_processor.py  vector_database.py
code_qa/servers/: code_qa_mcp_server.py  utils.py
